--- a/unlisted_web_page_karbytes_darknet_websites_root_directory_web_page.html
+++ b/unlisted_web_page_karbytes_darknet_websites_root_directory_web_page.html
@@ -3,13 +3,14 @@
  * file: karbytes_darknet_websites_root_directory_web_page.html
  * type: Hyper-Text-Markup-Language
  * author: karbytes
- * date: 26_JANUARY_2025
+ * date: 29_JANUARY_2025
  * license: PUBLIC_DOMAIN
  */
  -->
 <hr>
-<p><strong>KARLINA_OBJECT_extension_pack_28 (.onion version)</strong></p>
+<p><strong>KARLINA_OBJECT_extension_pack_29 (.onion version)</strong></p>
 <hr>
+<p><em>28_JANUARY_2025: This web page now represents the "micro directory" of karbytes' blog which is associated with the GitHub repository at the following Uniform Resource Locator: <a style="background: #00ff00;color: #000000" href="https://github.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_29/" target="_blank" rel="noopener">https://github.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_29/</a></em></p>
 <p><em>07_JANUARY_2025: The home page of the .onion website labeled B (which is THIS (dark net) web page) has been modified such that it now features the (currently private) GitHub repository named KARLINA_OBJECT_extension_pack_28. Note also that the .onion website labeled A is linked to from the home page of B (and that the home page of A has a different .onion address than does the home page of B).</em></p>
 <p>* * *</p>
 <p><em>29_DECEMBER_2024: In order to prevent a shortage of computational resources (especially hard drive space), I decided to host a dark web mirror of only one karbytes-created GitHub repository at a time.</p>
@@ -194,5 +195,5 @@
 <p><a style="background: #000000;color: #ff9000" href="/KARLINA_OBJECT_extension_pack_28/wayback_machine_save_page_now_input_form_14_july_2023.png" target="_blank" rel="noopener">/KARLINA_OBJECT_extension_pack_28/wayback_machine_save_page_now_input_form_14_july_2023.png</a></p>
 <p><a style="background: #000000;color: #ff9000" href="/KARLINA_OBJECT_extension_pack_28/yard_of_room_of_karbytes_cyber_camp_09january2025.mp4" target="_blank" rel="noopener">/KARLINA_OBJECT_extension_pack_28/yard_of_room_of_karbytes_cyber_camp_09january2025.mp4</a></p>
 <hr>
-<p>This web page was last updated on 26_JANUARY_2025. The content displayed on this web page is licensed as <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener">PUBLIC_DOMAIN</a> intellectual property.</p>
+<p>This web page was last updated on 28_JANUARY_2025. The content displayed on this web page is licensed as <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener">PUBLIC_DOMAIN</a> intellectual property.</p>
 <hr>
