--- a/unlisted_web_page_karbytes_social_media_posts_koep29.html
+++ b/unlisted_web_page_karbytes_social_media_posts_koep29.html
@@ -232,6 +232,18 @@ On 26_JANUARY_2025 at approximately 10:00AM Pacific Standard Time, karbytes shar
 On 26_JANUARY_2025 at approximately 4:00PM Pacific Standard Time, karbytes shared the following karbytes-created web page as a social media post on karbytes' Twitter dot Com page, on karbytes' Minds dot Com page, on karbytes' LinkedIn dot Com page, on karbytes' Patreon dot Com page, and on karbytes' Bluesky dot Com page:
 
 <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/journal_karbytes_29january2025/" target="_blank" rel="noopener noreferrer">https://karbytesforlifeblog.wordpress.com/journal_karbytes_29january2025/</a>
+
+* * *
+
+On 28_JANUARY_2025 at approximately 8:30AM Pacific Standard Time, karbytes shared the following karbytes-created web page as a social media post on karbytes' Twitter dot Com page, on karbytes' Minds dot Com page, on karbytes' LinkedIn dot Com page, on karbytes' Patreon dot Com page, and on karbytes' Bluesky dot Com page:
+
+<a style="background: #000000;color: #ff9000" href="https://karbytesforlifeblog.wordpress.com/journal_karbytes_31january2025/" target="_blank" rel="noopener noreferrer">https://karbytesforlifeblog.wordpress.com/journal_karbytes_31january2025/</a>
+
+* * *
+
+On 28_JANUARY_2025 at approximately 8:30AM Pacific Standard Time, karbytes shared the following karbytes-created web page as a social media post on karbytes' Twitter dot Com page, on karbytes' Minds dot Com page, on karbytes' LinkedIn dot Com page, on karbytes' Patreon dot Com page, and on karbytes' Bluesky dot Com page:
+
+<a style="background: #000000;color: #ff9000" href="https://karbytesforlifeblog.wordpress.com/chatgpt_karbytes_27january2025/" target="_blank" rel="noopener noreferrer">https://karbytesforlifeblog.wordpress.com/chatgpt_karbytes_27january2025/</a>
 </pre>
 <hr />
 <p>This web page was last updated on 28_JANUARY_2025. The content displayed on this web page is licensed as <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener noreferrer">PUBLIC_DOMAIN</a> intellectual property.</p>
