--- a/unlisted_web_page_karbytes_social_media_posts_koep29.html
+++ b/unlisted_web_page_karbytes_social_media_posts_koep29.html
@@ -8,7 +8,7 @@
 /**
  * file: <a style="background: #000000;color: #ff9000" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_29/main/karbytes_social_media_posts.txt" target="_blank" rel="noopener noreferrer">karbytes_social_media_posts.txt</a>
  * type: plain-text
- * date: 30_JANUARY_2025
+ * date: 31_JANUARY_2025
  * author: <a style="background: #000000;color: #ff9000" href="https://karbytesforlifeblog.wordpress.com/about_karbytes/" target="_blank" rel="noopener noreferrer">karbytes</a>
  * license: <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener noreferrer">PUBLIC_DOMAIN</a>
  */
@@ -249,8 +249,14 @@ On 28_JANUARY_2025 at approximately 8:30AM Pacific Standard Time, karbytes share
 
 On 30_JANUARY_2025 at approximately 4:30AM Pacific Standard Time, karbytes shared the following karbytes-created plain-text string as a social media post on karbytes' Bluesky dot Com page, on karbytes' Twitter dot Com page, and on karbytes' Minds dot Com page:
 
-<em>karbytes' dark web server is currently offline due to reasons unknown to karbytes at this time. karbytes is currently away from that server on a multi-day photography and nature immersion excursion and expects to have that server back up and running within the next two days (as of 30_JANUARY_2025).</em>
+<em>karbytes' dark web server is currently offline due to reasons unknown to karbytes at this time. karbytes is currently away from that server on a multi-day photography and nature immersion excursion and expects to have that server back up and running within the next two days (as of 30_JANUARY_2025).</em>https://mynoise.net/
+
+* * *
+
+On 31_JANUARY_2025 at approximately 12:30AM Pacific Standard Time, karbytes replied to the plain-text social media post it most recently made with the following karbytes-created plain-text string on karbytes' Bluesky dot Com page, on karbytes' Twitter dot Com page, and on karbytes' Minds dot Com page:
+
+<em>31_JANUARY_2025: I checked the power management settings on the server and saw that I forgot to set power management to off (instead of the default value on). I think that is why the server went offline. As of now, it is back online.</em>
 </pre>
 <hr />
-<p>This web page was last updated on 30_JANUARY_2025. The content displayed on this web page is licensed as <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener noreferrer">PUBLIC_DOMAIN</a> intellectual property.</p>
+<p>This web page was last updated on 31_JANUARY_2025. The content displayed on this web page is licensed as <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener noreferrer">PUBLIC_DOMAIN</a> intellectual property.</p>
 <hr>
