--- a/unlisted_web_page_karbytes_social_media_posts_koep29.html
+++ b/unlisted_web_page_karbytes_social_media_posts_koep29.html
@@ -8,7 +8,7 @@
 /**
  * file: <a style="background: #000000;color: #ff9000" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_29/main/karbytes_social_media_posts.txt" target="_blank" rel="noopener noreferrer">karbytes_social_media_posts.txt</a>
  * type: plain-text
- * date: 31_JANUARY_2025
+ * date: 01_FEBRUARY_2025
  * author: <a style="background: #000000;color: #ff9000" href="https://karbytesforlifeblog.wordpress.com/about_karbytes/" target="_blank" rel="noopener noreferrer">karbytes</a>
  * license: <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener noreferrer">PUBLIC_DOMAIN</a>
  */
@@ -256,7 +256,13 @@ On 30_JANUARY_2025 at approximately 4:30AM Pacific Standard Time, karbytes share
 On 31_JANUARY_2025 at approximately 12:30AM Pacific Standard Time, karbytes replied to the plain-text social media post it most recently made with the following karbytes-created plain-text string on karbytes' Bluesky dot Com page, on karbytes' Twitter dot Com page, and on karbytes' Minds dot Com page:
 
 <em>31_JANUARY_2025: I checked the power management settings on the server and saw that I forgot to set power management to off (instead of the default value on). I think that is why the server went offline. As of now, it is back online.</em>
+
+* * *
+
+On 01_FEBRUARY_2025 at approximately 12:00AM Pacific Standard Time, karbytes shared the following karbytes-created web page as a social media post on karbytes' Twitter dot Com page, on karbytes' Minds dot Com page, on karbytes' LinkedIn dot Com page, on karbytes' Patreon dot Com page, and on karbytes' Bluesky dot Com page:
+
+<a style="background: #000000;color: #ff9000" href="https://karbytesforlifeblog.wordpress.com/chatgpt_karbytes_31january2025/" target="_blank" rel="noopener noreferrer">https://karbytesforlifeblog.wordpress.com/chatgpt_karbytes_31january2025/</a>
 </pre>
 <hr />
-<p>This web page was last updated on 31_JANUARY_2025. The content displayed on this web page is licensed as <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener noreferrer">PUBLIC_DOMAIN</a> intellectual property.</p>
+<p>This web page was last updated on 01_FEBRUARY_2025. The content displayed on this web page is licensed as <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener noreferrer">PUBLIC_DOMAIN</a> intellectual property.</p>
 <hr>
