--- a/sound_track_looper_three.html
+++ b/sound_track_looper_three.html
@@ -22,7 +22,7 @@
         color: #000000;
       }
    </style>
-   <script src="sound_track_looper_two.js"></script>
+   <script src="sound_track_looper_three.js"></script>
  </head>
  <body onload="load_web_page()">
    <div class="bordered_container">
