--- a/unlisted_web_page_mdisc_karbytes2025_3.html
+++ b/unlisted_web_page_mdisc_karbytes2025_3.html
@@ -8,7 +8,7 @@
 /**
  * file: <a style="background: #000000;color: #ff9000" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_29/main/mdisc_karbytes2025_3.txt" target="_blank" rel="noopener">mdisc_karbytes2025_3.txt</a>
  * type: <a style="background: #ff9000;color: #000000" href="https://en.wikipedia.org/wiki/Plain_text" target="_blank" rel="noopener">plain-text</a>
- * date: 31_JANUARY_2025
+ * date: 01_FEBRUARY_2025
  * author: <a style="background: #000000;color: #ff9000" href="https://karbytesforlifeblog.wordpress.com/about_karbytes/" target="_blank" rel="noopener">karbytes</a>
  * license: <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener">PUBLIC_DOMAIN</a>
  */
@@ -43,7 +43,7 @@ Finally, each zip file which is referenced on this web page has a file name with
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
-karbytes2025_3: // folder contains exactly 126 files (approximately 12870.01 megabytes total).
+karbytes2025_3: // folder contains exactly 126 files (approximately 13028.39 megabytes total).
 
     - zip_file_0: <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/raw_github_files_directory_instagram_karbytes_2024/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_2024-main.zip</a> // 332.7 megabytes
 
@@ -265,7 +265,7 @@ karbytes2025_3: // folder contains exactly 126 files (approximately 12870.01 meg
 
     - zip_file_109: <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/raw_github_files_directory_KARLINA_OBJECT_extension_pack_28/" target="_blank" rel="noopener">KARLINA_OBJECT_extension_pack_28-main.zip</a> // 853.8 megabytes
 
-    - zip_file_110: <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/raw_github_files_directory_KARLINA_OBJECT_extension_pack_29/" target="_blank" rel="noopener">KARLINA_OBJECT_extension_pack_29-main_[undefined_day].zip</a> // 187.5 megabytes
+    - zip_file_110: <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/raw_github_files_directory_KARLINA_OBJECT_extension_pack_29/" target="_blank" rel="noopener">KARLINA_OBJECT_extension_pack_29-main_[undefined_day].zip</a> // 189.0 megabytes
 
     - zip_file_111: <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/raw_github_files_directory_KARLINA_OBJECT_summer_2023_starter_pack/" target="_blank" rel="noopener">KARLINA_OBJECT_summer_2023_starter_pack-main.zip</a> // 28.8 megabytes
 
@@ -295,7 +295,7 @@ karbytes2025_3: // folder contains exactly 126 files (approximately 12870.01 meg
 
     - zip_file_124: <strong>KARLINA_OBJECT_APPS-main.zip</strong> // 24.0 megabytes; downloaded from a private karbytes-created GitHub repository; may contain some public karbytes content in the form of "unlisted web page" source code and associated media files (for the website named Karbytes For Life Blog dot WordPress dot Com). 
 
-    - zip_file_125: <strong>KARBYTES_BLOG_APPS-main_[undefined_day].zip</strong> // 24.6 megabytes; downloaded from a private karbytes-created GitHub repository; may contain some public karbytes content in the form of "unlisted web page" source code and associated media files (for the website named Karbytes For Life Blog dot WordPress dot Com). 
+    - zip_file_125: <strong>KARBYTES_BLOG_APPS-main_[undefined_day].zip</strong> // 189.1 megabytes; downloaded from a private karbytes-created GitHub repository; may contain some public karbytes content in the form of "unlisted web page" source code and associated media files (for the website named Karbytes For Life Blog dot WordPress dot Com). 
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
@@ -304,5 +304,5 @@ END_OF_FILE
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 </pre>
 <hr />
-<p>This web page was last updated on 31_JANUARY_2025. The content displayed on this web page is licensed as <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener">PUBLIC_DOMAIN</a> intellectual property.</p>
+<p>This web page was last updated on 01_FEBRUARY_2025. The content displayed on this web page is licensed as <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener">PUBLIC_DOMAIN</a> intellectual property.</p>
 <hr>
